--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <button class="btn-primary">Contact us</button>
         </div>
     </div>
+    <!-- ---------My failures of previous year-------- -->
         <div id="My failures of previous year">
             <div class="Container">
                 <div class="row">
@@ -27,7 +28,16 @@
                         
                     </div>
                     <div class="My failures of previous year-col-2">
-                        <h1>My failures of previous year</h1>
+                        <h1 class="sub-tittle">My failures of previous year</h1>
+                        <p id="luis">Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots in a piece of <br> classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.</p>
+
+                        <ul>
+                            <li><span>Contrary to popular belief, is not simply.</span></li>
+                            <li><span>Contrary to popular belief.</span></li>
+                            <li><span>Contrary to popular, is not simply.</span></li>
+                            <li><span>Contrary to popular belief, is not simply.</span></li>
+                            <li><span>Contrary to popular simply.</span></li>
+                        </ul>
                     </div>
                 </div>
             </div>
