--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                         <p id="luis">Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots in a piece of <br> classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.</p>
 
                         <ul>
-                            <li><span>Contrary to popular belief, is not simply.</span></li>
-                            <li><span>Contrary to popular belief.</span></li>
-                            <li><span>Contrary to popular, is not simply.</span></li>
-                            <li><span>Contrary to popular belief, is not simply.</span></li>
+                            <li><span>Contrary to popular belief, is not simply.</span></li><br>
+                            <li><span>Contrary to popular belief.</span></li><br>
+                            <li><span>Contrary to popular, is not simply.</span></li><br>
+                            <li><span>Contrary to popular belief, is not simply.</span></li><br>
                             <li><span>Contrary to popular simply.</span></li>
                         </ul>
                     </div>
