--- a/index.html
+++ b/index.html
@@ -42,6 +42,32 @@
                 </div>
             </div>
         </div>
-    
+    <!--My Plans-->
+    <section class="my plans">
+         <h1 class="section-title">My Plans</h1>
+         <!--.skills-container>.skill*4>img+p.skill-title+p.skill-description>lorem15-->
+         <div class="skills-container">
+            <div class="skill">
+                <img src="images/icons/web.png" alt="">
+                <p class="skill-title">Web development</p>
+                <p class="skill-description">I want to start</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/js.png" alt="">
+                <p class="skill-title">Java script</p>
+                <p class="skill-description">I want to learn</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/smoke.png" alt="">
+                <p class="skill-title">Smoking habit</p>
+                <p class="skill-description">I want to end</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/ecom.png" alt="">
+                <p class="skill-title">ecommerce</p>
+                <p class="skill-description">I want to develop</p>
+            </div>
+         </div>
+    </section>
 </body>
 </html>
