--- a/index.html
+++ b/index.html
@@ -69,5 +69,16 @@
             </div>
          </div>
     </section>
+    <br>
+    <br>
+    <br>
+    <div class="container1">
+        <h1>Always keep a positive <br> mindset</h1>
+        <br>
+        
+    <div class="color-overlay">
+
+    </div>
+    </div>
 </body>
 </html>
