--- a/index.html
+++ b/index.html
@@ -80,5 +80,37 @@
 
     </div>
     </div>
+    <br>
+    
+    <!--contact section-->
+    <section class="future">
+    <div>
+    <h1 class="section-title">Future</h1>
+    <br>
+    <p>There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p>
+    <br>
+    <p>Email : info@gmail.com</p>
+    <br>
+    <p>Phone : 01500 00 00 00</p>
+    <a href="">
+    <img src="images/icons/fb.png" alt="">
+    </a>
+    <a href="">
+    <img src="images/icons/twitter.png" alt="">
+    </a>
+    <a href="">
+    <img src="images/icons/youtube.png" alt="">
+    </a>
+
+    </div>
+    <div>
+    <h4 class="section-title">subscribe</h4>
+    <br>
+    <form action="">
+        <input type="email" name="" id="" placeholder="your email">
+        <input type="submit" name="" id="" placeholder="submit">
+    </form>
+    </div>
+    </section>
 </body>
 </html>
