--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!--header banner-->
     <div class="banner">
-        <img src="../images/banner/banner1.png">
+        <img src="images/banner/banner1.png">
         <div class="text">
             <h1 class="text-title"><strong>All thinks Are Possible If You believe</strong></h1>
             <p class="text-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words
@@ -24,7 +24,7 @@
             <div class="Container">
                 <div class="row">
                     <div class="My failures of previous year-col-1">
-                        <img src="../images/person.png">
+                        <img src="images/person.png">
                         
                     </div>
                     <div class="My failures of previous year-col-2">
